--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     
             <section class="hero container mx-auto p-3 md:p-0">
                 <div class=" flex flex-col-reverse md:flex-row items-center justify-around gap-10 ">
-                    <div class="content sm:w-5/12 space-y-4">
+                    <div class="content md:w-5/12 space-y-4">
                         <h1 class="text-5xl lg:text-7xl font-bebas ">
                            <span class="text-yellow-500">Be the Penguins</span> 
                             <br>
