--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <header class="container mx-auto">
        <nav class="flex flex-col md:flex-row justify-between items-center p-6 gap-5 md:gap-0">
            <a href="#" class="w-auto md:w-5/12">
-               <img class="w-full lg:w-3/4 px-5 md:px-0" src="images/logo.png" alt="">
+               <img class="w-full max-w-sm lg:w-3/4 px-5 md:px-0" src="images/logo.png" alt="">
         </a>
         <ul class=" font-roboto font-extrabold w-auto flex gap-x-3 md:gap-x-8 text-xs  md:text-sm lg:text-lg">
             <li><a href="#">Home</a></li>
@@ -71,7 +71,7 @@
                         </button>
                     </div>
                     <div class="banner md:w-5/12">
-                        <img class="w-full" src="./images/model.png" alt="">
+                        <img class="w-full max-w-md" src="./images/model.png" alt="">
                     </div>
                 </div>
                 
