--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
     <section class="hero px-3 py-10 lg:py-0 bg-lightPink ">
       <div class="container mx-auto">
-        <div class="h-fit lg:h-screen flex flex-col-reverse md:flex-row items-center justify-around gap-10 ">
+        <div class="h-fit lg:h-screen flex flex-col-reverse md:flex-row items-center justify-around gap-10 md:gap-5 ">
           <div class="content md:w-5/12 space-y-4">
             <h1 class="text-5xl lg:text-7xl font-bebas ">
               <span class="text-penguine">Be the Penguins</span>
@@ -80,7 +80,7 @@
             </button>
           </div>
           <div class="banner md:w-5/12">
-            <img class="w-full max-w-md" src="./images/model.png" alt="">
+            <img class="w-full max-w-md md:ml-auto" src="./images/model.png" alt="">
           </div>
         </div>
       </div>
